# ocaml-dune-format

./: .gitignore  .ocamlformat  CLAUDE.md  README.md  dune-alphafmt.opam  dune-project
.github/workflows/: ci.yml
src/: alphafmt.ml  alphafmt.mli  dune
test/: dune  test_alphafmt.ml
test/res/: already_sorted.input  basic_sorting.expected  libraries_sorting.expected  libraries_sorting.input  library_sorting.expected  library_sorting.input  preprocess_pps_sorting.expected  preprocess_pps_sorting.input  single_form.input
